// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProductsGridView component renders correctly when empty 1`] = `
<div>
  <p
    class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
    data-testid="typography"
  >
    MC: plp.product.noResultsFound
  </p>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 Grid-item css-xrsztz-MuiGrid2-root"
    data-testid="grid-item"
  >
    <div
      class="TappableCard-root ColorPair-white css-1bloavi"
      data-testid="tappable-card-box"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?pathname=%2F"}"
        data-testid="tappable-card-main"
        href="/no/name-code?pathname=%2F"
        tabindex="0"
      >
        <img
          alt=" name"
          class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
          data-testid="tappable-card-media"
          draggable="false"
          src="http://localhost:8000"
        />
        <div
          class="TappableCard-body css-c6k36h"
        >
          <div
            class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
            data-testid="tappable-card-body-brand-logo"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
            data-testid="tappable-card-body-title"
          >
            name
          </h5>
          <div
            class="TappableCard-text"
            data-testid="tappable-card-body-description"
          >
            <p
              class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
              data-testid="product-overview-card-footer-description"
            >
              short-description
            </p>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
      <div
        class="TappableCard-footer css-1rg9dq1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
          data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?pathname=%2F"}"
          data-testid="anchor-link"
          href="/no/name-code?pathname=%2F"
        >
          MC: plp.product.viewDetails
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
            data-testid="internal"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductsGridView component renders correctly when not empty with filters from url 1`] = `
<div>
  <div
    class="MuiGrid2-root MuiGrid2-direction-xs-row MuiGrid2-grid-xs-12 MuiGrid2-grid-md-6 MuiGrid2-grid-lg-4 Grid-item css-xrsztz-MuiGrid2-root"
    data-testid="grid-item"
  >
    <div
      class="TappableCard-root ColorPair-white css-1bloavi"
      data-testid="tappable-card-box"
    >
      <a
        class="MuiButtonBase-root MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium MuiButton-root Button-root MuiButton-text Button-text MuiButton-textPrimary MuiButton-sizeMedium MuiButton-textSizeMedium TappableCard-cardButton css-82jeic-MuiButtonBase-root-MuiButton-root"
        data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"}"
        data-testid="tappable-card-main"
        href="/no/name-code?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"
        tabindex="0"
      >
        <img
          alt=" name"
          class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
          data-testid="tappable-card-media"
          draggable="false"
          src="http://localhost:8000"
        />
        <div
          class="TappableCard-body css-c6k36h"
        >
          <div
            class="TappableCard-brandLogo TappableCard-negative css-p11bhc"
            data-testid="tappable-card-body-brand-logo"
          />
          <h5
            class="MuiTypography-root MuiTypography-h5 TappableCard-title css-87i4k3-MuiTypography-root"
            data-testid="tappable-card-body-title"
          >
            name
          </h5>
          <div
            class="TappableCard-text"
            data-testid="tappable-card-body-description"
          >
            <p
              class="MuiTypography-root MuiTypography-body1  css-1o02bdp-MuiTypography-root"
              data-testid="product-overview-card-footer-description"
            >
              short-description
            </p>
          </div>
        </div>
        <span
          class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
        />
      </a>
      <div
        class="TappableCard-footer css-1rg9dq1"
      >
        <a
          class="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways Anchorlink css-1c5pucp-MuiTypography-root-MuiLink-root"
          data-gtm="{"id":"cta-click1","label":"MC: plp.product.viewDetails","action":"/no/name-code/?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"}"
          data-testid="anchor-link"
          href="/no/name-code?filters=%5B%7B%22name%22%3A%22brand%22%2C%22value%22%3A%5B%22BMI_Components%22%5D%7D%5D&pathname=search&q=query"
        >
          MC: plp.product.viewDetails
          <svg
            aria-hidden="true"
            class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-1vtibze-MuiSvgIcon-root"
            data-testid="internal"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="m12 4-1.41 1.41L16.17 11H4v2h12.17l-5.58 5.59L12 20l8-8z"
            />
          </svg>
        </a>
      </div>
    </div>
  </div>
</div>
`;

exports[`ProductsGridView component renders the default image SVG when mainImage is not defined 1`] = `
<svg
  class="TappableCard-headerPicture TappableCard-contain css-1817fzu"
  data-testid="tappable-card-media"
  draggable="false"
  viewBox="0 0 920 440"
  xmlns="http://www.w3.org/2000/svg"
>
  <path
    d="M0 0h920v440H0z"
    fill="none"
  />
  <path
    clip-rule="evenodd"
    d="M527.74 259.414 420.853 152.526h91.832c8.28 0 15.055 6.775 15.055 15.055zm-2.253 36.131-7.527-7.527H407.309c-8.28 0-15.054-6.774-15.054-15.054V162.313l-7.528-7.528 9.786-9.785 140.76 140.76zm-29.363-30.109-29.356-29.356-14.302 18.065-18.818-22.582-26.345 33.873z"
    fill="#CCC"
    fill-rule="evenodd"
  />
</svg>
`;
